--- a/promises.html
+++ b/promises.html
@@ -20,16 +20,24 @@
         })
     }
 
-    pobj1.then((responce) => {
-        console.log(responce);
-        getInfo(responce[1]).then((data)=>{
-            console.log(data);
-        }).catch((err)=>{
-            console.log(err);
-        })
-    }).catch((err)=>{
-        console.log(err);
-    });
+    // pobj1.then((responce) => {
+    //     console.log(responce);
+    //     getInfo(responce[1]).then((data)=>{
+    //         console.log(data);
+    //     }).catch((err)=>{
+    //         console.log(err);
+    //     })
+    // }).catch((err)=>{
+    //     console.log(err);
+    // });
 
+    async function getData(){
+        const obj1 = await pobj1;
+        console.log(obj1);
+        const obj2 = await getInfo(obj1[1]);
+        console.log(obj2);
+    }
+
+    getData();
 
 </script>
